--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.0.11",
     "bootstrap": "^4.2.1",
+    "nvm": "^0.0.4",
     "puppeteer": "^1.19.0",
-    "react": "^16.9.0",
+    "react": "^16.14.0",
     "react-dom": "^16.9.0",
     "react-scripts": "2.1.3"
   },
